# NotaScore

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  COMPLETION_CHECKLIST.md  DOCUMENTATION_INDEX.md  FILE_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_COMPLETE.md  MODERN_UI_README.md  PERFORMANCE_GUIDE.md  QT_SETUP.md  QUICK_TEST.md  README.md  UI_DELIVERY.md  UI_DESIGN.md  VISUAL_ARCHITECTURE.md
.github/workflows/: build.yml
examples/: NotascoreUIExamples.cpp
include/notascore/app/: Application.hpp  NotascoreApplication.hpp
include/notascore/audio/: AudioEngine.hpp
include/notascore/core/: MemoryPool.hpp  PerformanceProfile.hpp  TaskScheduler.hpp  ThreadPool.hpp
include/notascore/io/: NsxDocument.hpp
include/notascore/notation/: NotationEngine.hpp
include/notascore/platform/: NativeWindow.hpp
include/notascore/render/: CpuRenderer.hpp
include/notascore/ui/: InstrumentModel.hpp  MainWindow.hpp  ModernWidgets.hpp  PerformanceSettings.hpp  PreviewWidget.hpp  QtMainWindow.hpp  Theme.hpp
packaging/linux/: AppRun  build_appimage.sh  notascore.desktop
resources/: styles-modern.qss  styles.qss
src/: main.cpp
src/app/: Application.cpp  NotascoreApplication.cpp
src/audio/: AudioEngine.cpp
src/core/: PerformanceProfile.cpp  TaskScheduler.cpp  ThreadPool.cpp
src/io/: NsxDocument.cpp
src/notation/: NotationEngine.cpp
src/platform/: NativeWindow.cpp  NativeWindowQt.cpp  winmain.cpp
src/render/: CpuRenderer.cpp
src/ui/: MainWindow.cpp  ModernWidgets.cpp  PerformanceSettings.cpp  PreviewWidget.cpp  QtMainWindow.cpp  Theme.cpp
tests/: smoke.cpp
